--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -30,6 +30,6 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.TOKEN }}
-          user: ${{ secrets.OWNER }}
+          token: ${{ secrets.CLASSIC_KEY }}
+          user: ${{ secrets.CLASSIC_KEY }}
           template: repository
